Add StatusMessage and lastSavedState to Sudoku.razor
Use "alert alert-info" with "position-sticky", and my own "sticky-bottom-portrait" and "sticky-top-portrait"

Update translation

--- a/WebSudoku/Pages/PrintMultiple.razor
+++ b/WebSudoku/Pages/PrintMultiple.razor
@@ -45,7 +45,7 @@
 
     @if (generating)
     {
-        <div class="border border-2 border-info d-print-none">
+        <div class="alert alert-info d-print-none position-sticky sticky-top sticky-top-portrait">
             @Loc["Generating additional sudokus..."]
             <button class="btn btn-danger" @onclick="Cancel">@Loc["Cancel"]</button>
         </div>
