--- a/WebSudoku/Layout/MainLayout.razor.css
+++ b/WebSudoku/Layout/MainLayout.razor.css
@@ -15,6 +15,7 @@ main {
 .sidebar {
     background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
     flex-direction: column !important;
+    z-index: 100;
 }
 
 .top-row {
