--- a/WebSudoku/Pages/Sudoku.razor
+++ b/WebSudoku/Pages/Sudoku.razor
@@ -48,9 +48,13 @@
     
             <div class="div-options d-print-none">
                 <button class="btn btn-primary" @onclick="Save">@Loc["Save"]</button>
-                <button class="btn btn-primary" @onclick="Load">@Loc["Load"]</button>
+                <button class="btn btn-primary" @onclick="Load"
+                    title="@(string.IsNullOrEmpty(lastSavedState) ? Loc["Previous save not found"] : null)"
+                    disabled="@(string.IsNullOrEmpty(lastSavedState) ? "disabled" : null)">@Loc["Load"]</button>
                 <button class="btn btn-purple" onclick="print()">@Loc["Print"]</button>
                 <PrintSettings />
+
+                <span class="alert alert-info position-sticky sticky-bottom-portrait @(string.IsNullOrEmpty(StatusMessage) ? "d-none" : null)" role="status">@StatusMessage</span>
             </div>
         </div>
     }
@@ -92,6 +96,12 @@
 
     private Cell[,] cells = new Cell[Board.BoardSize, Board.BoardSize];
 
+    private string? lastSavedState;
+
+    private string StatusMessage = string.Empty;
+
+    private CancellationTokenSource cts = new();
+
     protected override bool ShouldRender()
     {
         return Loc.IsReady;
@@ -117,22 +127,49 @@
         }
 
         utilitiesModule = await JS.ImportAsync(JSModules.UtilitiesModule);
-
+        await FetchSavedState();
         CreateNewBoard();
+    }
+
+    private async ValueTask FetchSavedState()
+    {
+        if (utilitiesModule is null) return;
+        lastSavedState = await utilitiesModule.GetSettingAsync<string>(SudokuStateKey);
     }
 
     private async Task Save()
     {
         if (utilitiesModule == null) return;
 
-        await utilitiesModule.SetSettingAsync(SudokuStateKey, BoardSerializer.SerializeToJson(board, timer?.SpanToShow, GameStateVersion.Current));
+        string savedState = BoardSerializer.SerializeToJson(board, timer?.SpanToShow, GameStateVersion.Current);
+        await utilitiesModule.SetSettingAsync(SudokuStateKey, savedState);
+        lastSavedState = savedState;
+        await SetStatusMessage("Saved");
+    }
+
+    private Task SetStatusMessage(string messageKey)
+    {
+        CancelMessageClear();
+        StatusMessage = Loc[messageKey];
+        return Task.Delay(TimeSpan.FromSeconds(4), cts.Token).ContinueWith(t =>
+        {
+            if (t.IsCanceled) return;
+            StatusMessage = string.Empty;
+        });
+    }
+
+    private void CancelMessageClear()
+    {
+        cts?.Cancel();
+        cts?.Dispose();
+        cts = new();
     }
 
     private async Task Load()
     {
         if (utilitiesModule == null) return;
 
-        var jsonState = await utilitiesModule.GetSettingAsync<string>(SudokuStateKey);
+        var jsonState = string.IsNullOrEmpty(lastSavedState) ? await utilitiesModule.GetSettingAsync<string>(SudokuStateKey) : lastSavedState;
         if (jsonState != null)
         {
             // Load V2 save
@@ -142,21 +179,19 @@
                 board = loadedBoard;
                 timer?.SetTime(loadedTimer.Value);
                 InvalidCells = board.GetInvalidCells(SudokuValidator);
+                await SetStatusMessage("Loaded");
             }
             else
             {
                 // Load V1 save
                 var v1board = BoardSerializer.DeserializeFromJson(jsonState);
-                if (v1board != null)
+                var jsonTimer = await utilitiesModule.GetSettingAsync<string>(TimerStateKey);
+                if (v1board != null && timer != null && jsonTimer != null && TimeSpan.TryParse(jsonTimer, out var loadedTimerOnly))
                 {
                     board = v1board;
-                    InvalidCells = board.GetInvalidCells(SudokuValidator);
-                }
-
-                var jsonTimer = await utilitiesModule.GetSettingAsync<string>(TimerStateKey);
-                if (timer != null && jsonTimer != null && TimeSpan.TryParse(jsonTimer, out var loadedTimerOnly))
-                {
                     timer.SetTime(loadedTimerOnly);
+                    InvalidCells = board.GetInvalidCells(SudokuValidator);
+                    await SetStatusMessage("Loaded");
                 }
             }
         }
@@ -217,7 +252,7 @@
     {
         if (cellPositionOnAxis < 1 || cellPositionOnAxis > 9) throw new ArgumentOutOfRangeException(nameof(cellPositionOnAxis));
         if (Math.Abs(positionChange) > 1) throw new ArgumentOutOfRangeException(nameof(positionChange));
-        
+
         // Replaces previously used ternary operators with calculation using modulo.
         // Note that adding Board.BoardSize before using modulo allows wrapping around position from 1 to 9
         return ((Board.BoardSize + cellPositionOnAxis - 1 + positionChange) % Board.BoardSize) + 1;
@@ -276,6 +311,7 @@
     async ValueTask IAsyncDisposable.DisposeAsync()
     {
         Layout.OnStateChanging -= LoadResourcesAsync;
+        cts?.Dispose();
         if (module is null) return;
         await module.DisposeAsync();
     }
