--- a/WebSudoku/Layout/NavMenu.razor
+++ b/WebSudoku/Layout/NavMenu.razor
@@ -55,6 +55,11 @@
                 @Loc["Print Multiple"]
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="settings">
+                @Loc["Settings"]
+            </NavLink>
+        </div>
 
         <div class="flex-grow-1" />
 
