Use settings for PrintMultiple page
Update Index page

Add Settings button on the Index page

--- a/WebSudoku/Pages/Index.razor
+++ b/WebSudoku/Pages/Index.razor
@@ -16,7 +16,17 @@
 
     <p>@Loc["To start playing use the navigation menu or press the button below."]</p>
 
-    <a class="btn btn-success" href="sudoku">@Loc["Start playing"]</a> @Loc["or"] <a class="btn btn-secondary" href="printMultiple">@Loc["Print multiple ones"]</a>
+    <a class="btn btn-success" href="sudoku">@Loc["Start playing"]</a>
+
+    <span>&nbsp;@Loc["or"]&nbsp;</span>
+
+    <a class="btn btn-secondary" href="printMultiple">@Loc["Print multiple ones"]</a>
+
+    <span>&nbsp;@Loc["or"]&nbsp;</span>
+
+    <a class="btn btn-warning" href="settings">@Loc["Manage settings"]</a>
+    
+    <strong><span class="text-decoration-none text-uppercase text-primary">@Loc["New"]</span></strong>
 
     <h3>@Loc["Features"]</h3>
 
