Add adjustable settings info on Index page

--- a/WebSudoku/Pages/Index.razor
+++ b/WebSudoku/Pages/Index.razor
@@ -32,6 +32,18 @@
 
     <ul>
         <li>
+            <strong class="text-decoration-underline">@Loc["Adjustable settings"]</strong> <strong><span class="text-decoration-none text-uppercase text-primary">@Loc["New"]</span></strong>:
+            @Loc["The following sudoku generation settings can be adjusted"]:
+            <ul>
+                <li>
+                    @Loc["Desired blank cells"] - @Loc["Maximum amount of cells that can be blank"]
+                </li>
+                <li>
+                    @Loc["Cell blanking attempts"] - @Loc["Maximum attempts to blank next cell"]
+                </li>
+            </ul>
+        </li>
+        <li>
             <strong class="text-decoration-underline">@Loc["Print multiple"]</strong> <strong><span class="text-decoration-none text-uppercase text-primary">@Loc["New"]</span></strong>:
             @Loc["Separate page which allows preparing mulitple sudoku boards and allows generating adjustable amount of additional sudoku boards at once."]
             @Loc["Every board can be regenerated or removed."] @Loc["Also includes"] <b>@Loc["Clear all"]</b> @Loc["button for starting from scratch by clearing all boards on the page."]
