--- a/WebSudoku/Shared/LanguageSelect.razor
+++ b/WebSudoku/Shared/LanguageSelect.razor
@@ -1,8 +1,10 @@
 ﻿@using apb97.github.io.WebSudoku.Services
 
+@inherits LocalizableComponent<LanguageSelect>
+
 @inject IJSRuntime JS
-@inject NavigationManager Navigation
-@inject StringLocalizer<LanguageSelect> Loc
+
+<UtilitiesProvider @ref="utilitiesModule" />
 
 @if (ShouldRender())
 {
@@ -19,10 +21,9 @@
 
 @code
 {
-    [CascadingParameter]
-    public required MainLayout Layout { get; set; }
+    private static string? currentCulture;
 
-    public string? Culture { get; private set; }
+    public string? Culture { get => currentCulture; private set => currentCulture = value; }
 
     private IJSObjectReference? utilitiesModule;
 
@@ -32,26 +33,19 @@
         { "Polski", "pl-PL" }
     };
 
-    protected override bool ShouldRender()
+    protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        return Loc.IsReady;
-    }
+        if (!firstRender) return;
+        if (utilitiesModule is null) return;
 
-    protected override async Task OnInitializedAsync()
-    {
-        utilitiesModule = await JS.ImportAsync(JSModules.UtilitiesModule);
-        if (utilitiesModule is not null)
-            Culture = await utilitiesModule.GetSettingAsync<string>("BlazorCulture") ?? "en-US";
-
-        await Loc.InitializeAsync(Culture);
-        await Layout.NotifyStateChanged();
+        await UpdateLocalizationAsync(await utilitiesModule.GetSettingAsync<string>("BlazorCulture"));
     }
 
     private async Task UpdateLocalizationAsync(string value)
     {
-        Culture = value;
+        if (Culture == value) return;
+        Culture = value ?? "en-US";
         await Loc.InitializeAsync(value);
-        StateHasChanged();
 
         await Layout.NotifyStateChanged();
 
