Update Index page
Add information about popup when saving or loading

--- a/WebSudoku/Pages/Index.razor
+++ b/WebSudoku/Pages/Index.razor
@@ -49,7 +49,7 @@
             @Loc["Every board can be regenerated or removed."] @Loc["Also includes"] <b>@Loc["Clear all"]</b> @Loc["button for starting from scratch by clearing all boards on the page."]
         </li>
         <li>
-            <strong class="text-decoration-underline">@Loc["Saving and loading"]</strong>: @Loc["Sudoku state can be saved and loaded."] @Loc["Currently saves to and loads from browser's LocalStorage."]
+            <strong class="text-decoration-underline">@Loc["Saving and loading"]</strong>: @Loc["Sudoku state can be saved and loaded."] @Loc["When saving or loading a small popup message appears"] @Loc["Currently saves to and loads from browser's LocalStorage."]
         </li>
         <li>
             <strong class="text-decoration-underline">@Loc["Printing"]</strong>: @Loc["You can print the sudoku board with ability to adjust the following options"]:
